--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -55,3 +55,5 @@ en:
         subject: 'Reset password instructions'
       unlock_instructions:
         subject: 'Unlock Instructions'
+  button:
+    dashboard: 'Dashboard'
