--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,7 +8,9 @@ en:
   lock: 'Lock'
   unlock: 'Unlock'
   new: 'New'
+  back: 'Back'
   dashboard: 'Dashboard'
+  cancel: 'Cancel'
   menu: 
     logout: Logout
     users: Users
