--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,6 +3,7 @@
 en:
   errors:
     messages:
+      are_you_sure: "Are you sure?"
       expired: "has expired, please request a new one"
       not_found: "not found"
       already_confirmed: "was already confirmed, please try signing in"
