--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,7 @@ en:
   back: 'Back'
   dashboard: 'Dashboard'
   cancel: 'Cancel'
+  actions: 'Actions'
   menu: 
     logout: Logout
     users: Users
