Changed work and home phone for phone number

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,8 +31,7 @@ en:
         state: 'State'
         country: 'Country'
         zip: 'Zip'
-        home_phone: 'Home phone'
-        work_phone: 'Work phone'
+        phone_number: 'Phone Number'
         id: 'Member id'
         status: 'Current Status'
         created_at: 'Member since date'
