--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,11 @@ en:
         bill_date: 'Next bill date'
         cancel_date: 'Cancel date'
         terms_of_membership_id: 'Terms of membership'
+      credit_card:
+        number: 'Credit card number'
+        expire_date: 'Expire date'
+        expire_month: 'Expire month'
+        expire_year: 'Expire year'
   date:
     formats:
       default: "%d/%m/%Y"
