refs #18816 - 1 transaction has the refunded amount. We wont allow to refund $ more than the one billed. We can allow someone to do partials refunds. Needs unit testing.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,12 @@ en:
     agents: Agents
   activerecord:
     attributes:
+      transaction:
+        transaction_types: 
+          sale: Sale
+          refund: Credit
+          credit: Credit
+          void: Credit
       agent:  
         login: "Username or email"
         password: "Password"
