--- a/README.rdoc
+++ b/README.rdoc
@@ -5,3 +5,6 @@ RAILS_ENV=production rake db:drop; RAILS_ENV=production rake db:create ; RAILS_E
 
 http://rails-erd.rubyforge.org/install.html
 sudo aptitude install graphviz
+
+Generate Model 
+rake erd
