--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,9 +43,9 @@ en:
         phone_number: 'Phone Number'
         id: 'Member id'
         status: 'Current Status'
-        created_at: 'Member since date'
+        member_since_date: 'Member since date'
         join_date: 'Join date'
-        bill_date: 'Next bill date'
+        next_retry_bill_date: 'Next bill date'
         cancel_date: 'Cancel date'
         terms_of_membership_id: 'Terms of membership'
         visible_id: 'ID'
