--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,8 +40,10 @@ en:
         password: "Password"
         remember_me: "Remember me"
       member:
+        full_name: 'Full name'
         first_name: 'First name'
         last_name: 'Last name'
+        full_address: 'Full address'
         address: 'Address'
         city: 'City'
         state: 'State'
