ref#19171 - Added popover to show helps on form fields.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,7 @@ en:
   reason: 'Reason'
   added_by: 'Added by'
   ago: 'ago'
+  example: 'Example'
   text_cancel_are_you_sure: 'This member will be canceled. Are you really sure?'
   menu: 
     logout: 'Logout'
@@ -61,6 +62,8 @@ en:
         member_group_type: 'Member group type'
         not_group_associated: 'It has no member group type associated.'
         does_not_have_member_groups: 'It has no groups to be selected.'
+        zip_help: 'It supports zips with format xxxxx or xxxxx-xxxx. Only numbers.'
+        phone_number_help: 'Formats: xxx-xxx-xxxx, xxxx-xxxx(xxxx), +xx xxxx-xxxx(xxxx). Only numbers.'
       credit_card:
         number: 'Credit card number'
         expire_date: 'Expire date'
