--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,6 +64,7 @@ en:
         cancel_date: 'Cancel date'
         terms_of_membership_id: 'Terms of membership'
         visible_id: 'ID'
+        reactivation_times: 'Reactivation times'
         member_group_type: 'Member group type'
         not_group_associated: 'It has no member group type associated.'
         does_not_have_member_groups: 'It has no groups to be selected.'
