Fixed recovery method on member#show. Now it post on recovery method on member controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,7 @@ en:
   ago: 'ago'
   example: 'Example'
   refund: 'Refund'
+  recovery: 'Recovery'
   text_cancel_are_you_sure: 'This member will be canceled. Are you really sure?'
   menu: 
     logout: 'Logout'
