Fixed method and views of create, active and blacklist credit cards

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,6 +77,7 @@ en:
         expire_date: 'Expire date'
         expire_month: 'Expire month'
         expire_year: 'Expire year'
+        blacklisted: 'Blacklisted'
       operation:
         operation_date: 'Operation date'
         description: 'Description'
