--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -74,6 +74,8 @@ en:
         phone_number_help: 'Formats: xxx-xxx-xxxx, xxxx-xxxx(xxxx), +xx xxxx-xxxx(xxxx), xxx xxx xxxx (intxx) or xxx-xxx-xxxx x123. Only numbers.'
         set_unreachable: 'Set Unreachable'
         set_undeliverable: 'Set undeliverable'
+        undeliverable: 'This address is undeliverable.'
+        unreachable: 'This phone number is unreachable.'
       credit_card:
         number: 'Credit card number'
         expire_date: 'Expire date'
