--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,7 +22,7 @@ en:
   ago: 'ago'
   example: 'Example'
   refund: 'Refund'
-  recovery: 'Recovery'
+  recover: 'Recover'
   resend: 'Resend'
   are_you_sure: 'Are you sure?'
   text_cancel_are_you_sure: 'This member will be canceled. Are you really sure?'
