--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,6 +25,8 @@ en:
   refund: 'Refund'
   recover: 'Recover'
   resend: 'Resend'
+  search_results: 'Search results'
+
   are_you_sure: 'Are you sure?'
   text_cancel_are_you_sure: 'This member will be canceled. Are you really sure?'
   text_blacklist_are_you_sure: 'This member will be blacklisted. Are you really sure?'
@@ -80,6 +82,7 @@ en:
         set_undeliverable: 'Set undeliverable'
         undeliverable: 'This address is undeliverable.'
         unreachable: 'This phone number is unreachable.'
+        search_member_not_found: 'No records were found.'
       credit_card:
         number: 'Credit card number'
         expire_date: 'Expire date'
