fixed view and added translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,6 +25,7 @@ en:
   refund: 'Refund'
   recover: 'Recover'
   resend: 'Resend'
+  search: 'Search'
   search_results: 'Search results'
 
   are_you_sure: 'Are you sure?'
