Fixed translation on transaction

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -58,3 +58,11 @@ en:
         subject: 'Unlock Instructions'
   button:
     dashboard: 'Dashboard'
+  activerecord: 
+    attributes:
+      transaction:
+        transaction_types: 
+          sale: Sale
+          refund: Credit
+          credit: Credit
+          void: Credit
