--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,6 +49,7 @@ en:
         description: 'Description'
         amount: 'Amount'
         gw_trans: 'Gw trans'
+        not_found: 'No transactions were founded.'
       agent:  
         login: "Username or email"
         password: "Password"
@@ -111,6 +112,7 @@ en:
         asigned_at: 'Asigned at'
         delivered_at: 'Delivered at'
         renewable_at: 'Renewable at'
+        not_found: 'No fulfillments were founded.'
       communication:
         response: 'Response'
         template_name: 'Template name'
@@ -119,6 +121,7 @@ en:
         processed_at: 'Processed at'
         template_type: 'Template type'
         sent_success: 'Sent success'
+        not_found: 'No communications were founded.'
       transaction:
         refund_amount_help: 'Amount to refund (e.g.: $45.34)  '
         transaction_types: 
