--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,6 +97,8 @@ en:
         search_member_not_found: 'No records were found.'
         club_cash_amount: 'Club cash amount'
         add_club_cash_transaction: 'Add club cash'
+        unset_wrong_address: 'Address setted as wrong. Would you like to unset it?'
+        unset_wrong_phone_number: 'Phone setted as wrong. Would you like to unset it?'
       credit_card:
         number: 'Credit card number'
         expire_date: 'Expire date'
