--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,7 @@ en:
           refund: Credit
           credit: Credit
           void: Credit
+          authorization_capture: 'Authorization-Capture'
         date: 'Date'
         description: 'Description'
         amount: 'Amount'
