Improved dataTable for transactions. Also fixed some problems with Operations dataTable.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,6 +54,7 @@ en:
     email_template: 'Email template'
     attributes:
       transaction:
+        refundable: 'Refundable'
         refund_amount_help: 'Amount to refund (e.g.: $45.34)'
         transaction_types: 
           sale: Sale
