--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,6 +50,7 @@ en:
     save_credit_card: 'Save credit card'
   activerecord:
     member: 'Member'
+    members: 'Members'
     term_of_membership: 'Term of membership'
     email_template: 'Email template'
     attributes:
