--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -132,6 +132,10 @@ en:
         installment_type: 'Installment type'
         grace_period: 'Grace period'
         trial_days: 'Trial days'
+        has_payment_gateway_development: 'The club has payment gateway configuration for development mode'
+        has_payment_gateway_production: 'The club has payment gateway configuration for production mode'
+        not_have_payment_gateway_development: 'The club does not have payment gateway configuration for development mode'
+        not_have_payment_gateway_production: 'The club does not have payment gateway configuration for production mode'
       email_template:
         name: 'Name'
         type: 'Type'
