fixing minimal things.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -130,6 +130,7 @@ en:
         expire_year: 'Expire year'
         blacklisted: 'Blacklisted'
         last_digits: 'Last digits'
+        active: 'active'
       operation:
         operation_date: 'Operation date'
         description: 'Description'
