added information on member#show related to membership.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -104,8 +104,12 @@ en:
         email: 'Email'
         member_since_date: 'Member since date'
         join_date: 'Join date'
+        club_cash_expire_date: 'Club cash expire date'
         next_retry_bill_date: 'Next bill date'
+        created_by: 'Created by'
         cancel_date: 'Cancel date'
+        recycled_times: 'Recycled times'
+        quota: 'Quota'
         terms_of_membership_id: 'Terms of membership'
         visible_id: 'ID'
         reactivation_times: 'Reactivation times'
