ref#21650 - Fixed ssyntax of labels and also added a popover for recycle times to explain it (only when it is greater that 0)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -109,11 +109,12 @@ en:
         created_by: 'Created by'
         cancel_date: 'Cancel date'
         recycled_times: 'Recycled times'
+        recycled_times_explanation: 'The number of recycle attempts in the current recycle process. If greater than 0, then the member is currently in a recycle stage. This number resets upon HD or successful charge.'
         quota: 'Quota'
         terms_of_membership_id: 'Terms of membership'
         visible_id: 'ID'
-        reactivation_times: 'Reactivation times'
-        member_group_type: 'Group'
+        recovery_times: 'Recovery times'
+        member_classification_type: 'Classification'
         not_group_associated: ' -- '
         not_have_birth_date_set: 'No birth date set.'
         does_not_have_member_groups: 'It has no groups to be selected.'
