--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -113,6 +113,8 @@ en:
         quota: 'Quota'
         terms_of_membership_id: 'Terms of membership'
         visible_id: 'ID'
+        date_of_primary_cc: 'Date Added of Primary CC'
+        last_successful_bill_date: 'Last successful bill date'
         recovery_times: 'Recovery times'
         member_classification_type: 'Classification'
         not_group_associated: ' -- '
