added translations to match the current changes.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,7 +98,9 @@ en:
         state: 'State'
         country: 'Country'
         zip: 'Zip'
+        gender: 'Gender'
         phone_number: 'Phone Number'
+        type_of_phone_number: 'Type of phone number'
         id: 'Member id'
         status: 'Current Status'
         email: 'Email'
