ref#21650 - Added notes field on search index. It searches inside every members note description.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,6 +61,7 @@ en:
     term_of_membership: 'Term of membership'
     email_template: 'Email template'
     credit_card: 'CC'
+    notes: 'Notes'
     attributes:
       transaction:
         refundable: 'Refundable'
