--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,6 +60,7 @@ en:
   activerecord:
     member: 'Member'
     members: 'Members'
+    products: 'Products'
     term_of_membership: 'Term of membership'
     email_template: 'Email template'
     credit_card: 'CC'
