ref#22262-Added uniq on member's search result and also fixed notes field label.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -111,6 +111,7 @@ en:
         country: 'Country'
         zip: 'Zip'
         gender: 'Gender'
+        member_notes: 'Member Notes'
         phone_number: 'Phone Number'
         type_of_phone_number: 'Type of phone number'
         id: 'Member id'
