--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,6 +54,7 @@ en:
     save_operation_note: 'Save operation'
     save_credit_card: 'Save credit card'
     report: 'Report'
+    generate_csv: 'Generate csv'
   admin:
     agents:
       index:
