--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -130,7 +130,7 @@ en:
         recycled_times_explanation: 'The number of recycle attempts in the current recycle process. If greater than 0, then the member is currently in a recycle stage. This number resets upon HD or successful charge.'
         quota: 'Quota'
         terms_of_membership_id: 'Terms of membership'
-        visible_id: 'ID'
+        visible_id: 'Member ID'
         date_of_primary_cc: 'Date Added of Primary CC'
         last_successful_bill_date: 'Last successful bill date'
         recovery_times: 'Recovery times'
