added credit cards added_at date on members#show page.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -132,6 +132,7 @@ en:
         terms_of_membership_id: 'Terms of membership'
         visible_id: 'Member ID'
         date_of_primary_cc: 'Date Added of Primary CC'
+        date_of_active_credit_card: 'Date Added of Active CC'
         last_successful_bill_date: 'Last successful bill date'
         recovery_times: 'Recovery times'
         member_classification_type: 'Classification'
@@ -170,6 +171,7 @@ en:
         number: 'Credit card number'
         expire_date: 'Expire date'
         expire_month: 'Expire month'
+        added_at: 'Added at'
         expire_year: 'Expire year'
         blacklisted: 'Blacklisted'
         last_digits: 'Last digits'
