fixed many tests, few to go

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -111,6 +111,9 @@ en:
         city: 'City'
         state: 'State'
         country: 'Country'
+        supported_countries:
+          us: United States
+          ca: Canada
         zip: 'Zip'
         gender: 'Gender'
         member_notes: 'Member Notes'
