--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -206,6 +206,7 @@ en:
         renewable_at: 'Renewable at'
         not_found: 'No fulfillments were found.'
         status: 'Status'
+        product_type: 'Product type'
       communication:
         response: 'Response'
         template_name: 'Template name'
