ref#22832- Fixed bug of fulfillment actions when member is lapsed. Also added integration test.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -169,6 +169,7 @@ en:
           synced: Synced
           unsynced: Not Synced
           error: Sync Error
+        is_lapsed: 'Member was canceled.'
       club:
         id: 'ID'
         name: 'Name'
