--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -111,6 +111,12 @@ en:
       domain:
         url_help: 'Formats: http://xxxxx.xxx.xx or https://xxxxx.xxx.xx'
       member:
+        pardot_id: ID
+        pardot_last_synced_at: Last Success Sync
+        pardot_synced_status: Status
+        pardot_last_sync_error: Sync Error
+        pardot_last_sync_error_at: Sync Error Time
+        cohort: Cohort
         api_id: 'Remote ID'
         member_id: 'Member ID'
         full_name: 'Full name'
