--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,6 +65,7 @@ en:
     show_remote_data: 'Show remote data'
     unset: 'Unset'
     edit: 'Edit'
+    cancel_update: 'Cancel Update'
     stop_editing: 'Stop editing'
   admin:
     agents:
