--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,6 +67,8 @@ en:
     edit: 'Edit'
     cancel_update: 'Cancel Update'
     stop_editing: 'Stop editing'
+    select_country: 'Select country'
+    select_state: 'Select state'
   admin:
     agents:
       index:
