fixed combo box of members country and state

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,6 +66,8 @@ en:
     unset: 'Unset'
     edit: 'Edit'
     stop_editing: 'Stop editing'
+    select_country: 'Select country'
+    select_state: 'Select state'
   admin:
     agents:
       index:
